--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V180)
+// @ConfigVersion     2.0 (V181)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -64,7 +64,7 @@
 # [-]2023-06-04 48、移除部分重写，添加小红书去水印重写，重新整理重写Part部分
 # [-]2023-06-28 49、调整本地夸克APP的分流规则，删除什么值得买的排除域名-*api.smzdm.com，新版已可MITM，替换Apple的Policy图标
 # [+]2023-07-10 50、新增一条临时使用的机场订阅，方便小白对配置进行更新，此外对节点名称统一命名，命名方式为tg-ddgksf2021-num-序号，大家有空可以研究研究解析器，强大好用
-# [+]2023-08-05 51、QX通知中，建议关闭NetWork状态通知及关闭分流匹配优化开关
+# [+]2023-08-05 51、QX通知中，建议关闭NetWork状态通知及关闭分流匹配优化开关，若你在登录AppleStore账户时遇到问题，请将 -*apple.com, 内容复制粘贴到hostname = 后面
 
 
 
@@ -286,6 +286,7 @@ skip_validating_cert = true
 force_sni_domain_name = false
 
 hostname = -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+# 若你在登录AppleStore账户时遇到问题，请将 -*apple.com, 内容复制粘贴在上面 hostname = 后面
 
 # 🟢 墨鱼提醒passphrase和p12代为证书&主机名部分, 更新配置前可把旧的配置中passphrase和p12代码拷贝下来, 导入新的配置文件把内容粘贴在对应位置就不用重装证书
 
