--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/08/05 12:28 UTC/GMT +8
+// @UpdateTime        2023/08/20 20:19 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V181)
+// @ConfigVersion     2.0 (V182)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -65,7 +65,7 @@
 # [-]2023-06-28 49、调整本地夸克APP的分流规则，删除什么值得买的排除域名-*api.smzdm.com，新版已可MITM，替换Apple的Policy图标
 # [+]2023-07-10 50、新增一条临时使用的机场订阅，方便小白对配置进行更新，此外对节点名称统一命名，命名方式为tg-ddgksf2021-num-序号，大家有空可以研究研究解析器，强大好用
 # [+]2023-08-05 51、QX通知中，建议关闭NetWork状态通知及关闭分流匹配优化开关，若你在登录AppleStore账户时遇到问题，请将 -*apple.com, 内容复制粘贴到hostname = 后面
-
+# [+]2023-08-20 52、鉴于不断有小白发邮件咨询为什么AppleStore无法切换登录账户，故在小白配置中，默认添加-*.apple.com，有相关破解需求者请自行移除
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -217,7 +217,7 @@ static=哔哩哔哩, direct, 香港节点, 台湾节点, img-url=https://raw.git
 static=国际媒体, 自动选择, 台湾节点, direct, 香港节点, 日本节点, 美国节点, 狮城节点, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 static=兜底分流, 自动选择, 全球加速, direct, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
-#默认设置10分钟测速一次
+#默认设置10分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(网易|墨鱼)))*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
@@ -285,8 +285,7 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=b
 skip_validating_cert = true
 force_sni_domain_name = false
 
-hostname = -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
-# 若你在登录AppleStore账户时遇到问题，请将 -*apple.com, 内容复制粘贴在上面 hostname = 后面
+hostname = -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
 
 # 🟢 墨鱼提醒passphrase和p12代为证书&主机名部分, 更新配置前可把旧的配置中passphrase和p12代码拷贝下来, 导入新的配置文件把内容粘贴在对应位置就不用重装证书
 
