--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,13 +4,14 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/11/10 11:25 UTC/GMT +8
+// @UpdateTime        2023/11/18 17:20 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V189)
+// @ConfigVersion     2.0 (V2.0.190)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
+// @ConfigCdnURL      https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
 // ==/UserScript==
 
 # 𝐂𝐮𝐭𝐭𝐥𝐞𝐟𝐢𝐬𝐡 𝐒𝐞𝐥𝐟-𝐮𝐬𝐞 𝐂𝐨𝐧𝐟𝐢𝐠𝐮𝐫𝐚𝐭𝐢𝐨𝐧 𝐂𝐡𝐚𝐧𝐠𝐞𝐥𝐨𝐠 𝐂𝐫𝐞𝐚𝐭𝐞𝐝 𝐛𝐲 𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑
@@ -70,6 +71,7 @@
 # [+]2023-10-05 54、移除哔哩哔哩自动换区的重写[新版失效]，单独增加Spotify应用的分流，默认指向香港节点[自行按照需求去掉;以启用该条分流]
 # [-]2023-11-09 55、移除酷我音乐纯净版SVIP重写，经群友反馈，纯净版酷我APP内部分VIP音乐无法聆听，故删除
 # [-]2023-11-10 56、启用临时使用1订阅，屏蔽临时使用2订阅[无法更新]，提醒订阅仅供临时使用，推荐注册花云https://shrtm.nu/gCi
+# [+]2023-11-18 57、为墨鱼小白QX2.0配置添加直连CDN链接 https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
