--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/11/22 17:20 UTC/GMT +8
+// @UpdateTime        2023/12/06 20:20 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V193)
+// @ConfigVersion     2.0 (V194)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // @ConfigCdnURL      https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
 // ==/UserScript==
@@ -73,6 +73,7 @@
 # [-]2023-11-10 56、启用临时使用1订阅，屏蔽临时使用2订阅[无法更新]，提醒订阅仅供临时使用，推荐注册花云https://shrtm.nu/gCi
 # [+]2023-11-18 57、为墨鱼小白QX2.0配置添加直连CDN链接 https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
 # [+]2023-11-22 58、将OpenAI的分流替换为blackmatrix7，以保证分流规则的实时可用性
+# [+]2023-12-06 59、添加QuantumultX播放IPV6直播源方法：删去DNS下面的「no-ipv6」，并在「VPN」栏中，开启「兼容性增强」
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -201,6 +202,7 @@ https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg#delreg=.*&rena
 
 ;prefer-doh3
 ;doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
+# > QuantumultX开启IPV6方法，删去下面的「no-ipv6」，在「VPN」栏中，开启「兼容性增强」
 no-ipv6
 no-system
 server=223.5.5.5
